--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,16 @@ body{
 
 }
 #display{
-    width: 100%;
+    max-width: 85%;
     border: none;
     border-radius: 10px;
-    padding: 50px;
+    padding: 40px;
     background-color: hsl(0, 0%, 30%);
+    font-size: 50px;
+    color: white;
+    text-align: right;
+    
+    
 }
 
 .button-keys{
