--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,72 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0.6in;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.6in;
 }
-#calculator{
-    font-family: Arial, sans-serif;
-    max-width: 500px;
-    background-color: hsl(0, 0%, 15%);
-    border-radius: 15px;
-    overflow: hidden;
-    border: 1px solid black;
-    justify-content: center;
-     
-    
-
+#calculator {
+  font-family: Arial, sans-serif;
+  max-width: 500px;
+  background-color: hsl(0, 0%, 15%);
+  border-radius: 15px;
+  overflow: hidden;
+  border: 1px solid black;
+  justify-content: center;
 }
-#display{
-    max-width: 85%;
-    border: none;
-    border-radius: 10px;
-    padding: 40px;
-    background-color: hsl(0, 0%, 30%);
-    font-size: 50px;
-    color: white;
-    text-align: right;
-    
-    
+#display {
+  max-width: 85%;
+  border: none;
+  border-radius: 10px;
+  padding: 40px;
+  background-color: hsl(0, 0%, 30%);
+  font-size: 50px;
+  color: white;
+  text-align: right;
 }
 
-.button-keys{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
-    padding: 15px;
-
+.button-keys {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+  padding: 15px;
 }
-button{
-    display: grid;
-    width: 100px;
-    height: 100px;
-    border: none;
-    border-radius: 100px;
-    font-size: 32px;
-    align-items: center;
-    cursor: pointer;
-    background-color: hsl(0, 0%, 35%);
-    font-weight: bold;
-    color: white;
-    
+button {
+  display: grid;
+  width: 100px;
+  height: 100px;
+  border: none;
+  border-radius: 100px;
+  font-size: 32px;
+  align-items: center;
+  cursor: pointer;
+  background-color: hsl(0, 0%, 25%);
+  font-weight: bold;
+  color: white;
 }
-button:hover{
-    background-color: hsl(0, 0%, 45%);
-
+button:hover {
+  background-color: hsl(0, 0%, 45%);
 }
 
-button:active{
-    background-color: hsl(0, 0%, 60%);
+button:active {
+  background-color: hsl(0, 0%, 60%);
 }
 
-#operant{
-    background-color: hsl(0, 71%, 50%);
-
+.operant {
+  background-color: hsl(0, 71%, 50%);
 }
-#operant:hover{
-
-    background-color: hsl(0, 71%, 60%);
-
+.operant:hover {
+  background-color: hsl(0, 71%, 60%);
 }
-#operant:active{
-    background-color: hsl(0, 71%, 70%);
+.operant:active {
+  background-color: hsl(0, 71%, 70%);
 }
 
+#zero {
+  grid-column: span 2;
+  width: 100%;
+}
 
-#zero{
-    grid-column: span 2;
-    width: 100%;
+#clear,
+#special {
+  background-color: hsl(0, 0%, 35%);
 }
