--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 0.6in;
-  background-color: darkslategray;
+  background-color: #1e1e1e ;
 }
 #calculator {
   font-family: Arial, sans-serif;
@@ -63,13 +63,13 @@ button:active {
 }
 
 .operant {
-  background-color: hsl(0, 71%, 50%);
+  background-color:hsl(28, 100%, 50%);
 }
 .operant:hover {
-  background-color: hsl(0, 71%, 60%);
+  background-color: hsl(28, 100%, 60%);
 }
 .operant:active {
-  background-color: hsl(0, 71%, 70%);
+  background-color: hsl(28, 100%, 70%);
 }
 
 #zero {
@@ -77,7 +77,14 @@ button:active {
   width: 100%;
 }
 
-#clear,
-#special {
+
+#special,#clear {
   background-color: hsl(0, 0%, 35%);
+}
+
+#special:hover, #clear:hover{
+    background-color: hsl(0, 0%, 45%);
+}
+#special:active, #clear:active{
+    background-color: hsl(0, 0%, 55%);
 }
